Changelog
=========

1.4.2 (xx.xx.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Streamfields no longer break on validation error
 * Fix: Number of validation errors in each tab in the editor is now correctly reported again
 * Fix: Userbar now opens on devices with both touch and mouse (Josh Barr)


1.4.1 (17.03.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Fixed erroneous rendering of up arrow icons (Rob Moorman)


1.4 (16.03.2016)
~~~~~~~~~~~~~~~~

 * Added support for viewing previous revisions of pages, and previewing or rolling back to earlier versions
 * Introduced collections, for image / document organisation
 * The Wagtail userbar on the frontend has been redesigned, and no longer depends on an iframe (Thomas Winter, Gareth Price).
 * The page editor now produces a warning if the user navigates away without saving changes
 * 'Add document' interface now supports uploading multiple documents at once
 * The `Document` model can now be overridden using the new `WAGTAILDOCS_DOCUMENT_MODEL` setting (Alex Gleason)
 * Wagtail no longer depends on django-compressor
 * The page search interface now searches all fields instead of just the title (Kait Crawford)
 * Snippets now support a custom `edit_handler` property (Mikalai Radchuk)
 * Date/time pickers now respect the locale's 'first day of week' setting (Peter Quade)
 * Refactored the way forms are constructed for the page editor, to allow custom forms to be used
 * Notification message on publish now indicates whether the page is being published now or scheduled for publication in future (Chris Rogers)
 * Server errors when uploading images / documents through the chooser modal are now reported back to the user (Nigel Fletton)
 * Added a hook `insert_global_admin_css` for inserting custom CSS throughout the admin backend (Tom Dyson)
 * Added a hook `construct_explorer_page_queryset` for customising the set of pages displayed in the page explorer