@@ -7,6 +7,7 @@ Changelog
  * Fix: Streamfields no longer break on validation error
  * Fix: Number of validation errors in each tab in the editor is now correctly reported again
  * Fix: Userbar now opens on devices with both touch and mouse (Josh Barr)
+ * Improved L10N and I18N for revisions list. (Roel Bruggink)
 
 
 1.4.1 (17.03.2016)
